--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning React</title>
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 </head>
 <body>
-  <div id="root"></div>
-  <script src="App.js"></script>
+  
+  <div id="root">
+    <div> <h1> Hii! Ayush Here </h1> </div>
+  </div>
+  <script type="module" src="App.js"></script>
 </body>
 </html>
 
